--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,17 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="teal_300">#4db6ac</color>
+    <color name="teal_500">#009688</color>
+    <color name="teal_700">#00796b</color>
+    <color name="pink_a200">#ff4081</color>
+
+    <!-- text color -->
+    <color name="black100_text">#ff000000</color>
+    <color name="black80_text">#cc000000</color>
+    <color name="black70_text">#b3000000</color>
+    <color name="black60_text">#99000000</color>
+    <color name="black40_text">#66000000</color>
+    <color name="black30_text">#4d000000</color>
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
