--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -23,8 +23,9 @@
         <item name="colorAccent">@color/pink_a200</item>
     </style>
 
+    <style name="Theme.Bacon.Home">
+    </style>
     <style name="Theme.Bacon.Detail">
-        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
